# mRRLabelStudio

./: pyproject.toml
.github/workflows/: docker-build.yml
label_studio/core/: urls.py
label_studio/core/settings/: base.py
label_studio/data_manager/: api.py
label_studio/integrated_data/: api.py  brands.json  data.json  urls.py
label_studio/tasks/: api.py  bib_filter.py
web/: package-lock.json  package.json  webpack.config.js
web/apps/labelstudio/src/components/Menubar/: Menubar.jsx
web/apps/labelstudio/src/pages/: index.js
web/apps/labelstudio/src/pages/Event/: index.jsx
web/libs/app-common/src/pages/AccountSettings/sections/: PersonalAccessToken.tsx
web/libs/datamanager/src/utils/: feature-flags.js
web/libs/editor/src/components/App/: App.jsx
web/libs/editor/src/components/BottomBar/: Controls.tsx
web/libs/editor/src/components/Comments/OldComment/: CommentForm.tsx
web/libs/editor/src/components/Controls/: Controls.jsx
web/libs/editor/src/components/ImageGrid/: ImageGrid.jsx
web/libs/editor/src/components/ImageView/: Image.jsx  ImageGallery.jsx  ImageView.jsx  athleteClothingInfo.jsx  getProjectIdFromUrl.js
web/libs/editor/src/components/SidePanels/DetailsPanel/: DetailsPanel.scss  DetailsPanel.tsx  constants.tsx
web/libs/editor/src/components/SidePanels/DetailsPanel/components/: ShoesColorSelector.tsx
web/libs/editor/src/lib/AudioUltra/Regions/: Regions.ts
web/libs/editor/src/mixins/: Normalization.ts
web/libs/editor/src/regions/: BrushRegion.jsx  RectRegion.jsx  Result.js
web/libs/editor/src/stores/: AppStore.js  TaskStore.js
web/libs/editor/src/stores/Annotation/: Annotation.js  store.js
web/libs/editor/src/stores/Comment/: CommentStore.js
web/libs/editor/src/tags/control/Labels/: Labels.jsx
web/libs/editor/src/tags/object/: TimeSeries.jsx
web/libs/editor/src/tags/visual/: View.jsx
web/libs/editor/tests/e2e/fragments/: AtImageView.js
web/libs/ui/src/lib/select/: select.tsx  types.ts
