[project]
name = "label-studio"
version = "1.22.0.dev0"
description = "Label Studio annotation tool"
readme = "README.md"
license = "Apache-2.0"
authors = ["HumanSignal <support@humansignal.com>"]

[tool.poetry]
name = "label-studio"
version = "1.22.0.dev0"
description = "Label Studio annotation tool"
authors = ["HumanSignal <support@humansignal.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "label_studio" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
wheel = ">=0.38.1,<=0.40.0"
appdirs = ">=1.4.3"
attr = "==0.3.1"
attrs = ">=19.2.0"
pyyaml = ">=6.0.0"
azure-storage-blob = ">=12.6.0"
boto = ">=2.49.0,<3.0.0"
boto3 = ">=1.28.58,<2.0.0"
botocore = ">=1.39.3,<2.0.0"
bleach = ">=5.0.0,<5.1.0"
cryptography = ">=44.0.1"
Django = ">=5.1.8,<5.2.0"
django-storages = "==1.12.3"
django-annoying = "==0.10.6"
django-debug-toolbar = "==3.2.1"
django-environ = "==0.10.0"
django-filter = "==24.3"
django-model-utils = "==4.1.1"
django-rq = ">=2.10.2,<3.0.0"
django-cors-headers = "==4.7.0"
django-extensions = "==3.2.3"
django-user-agents = "==0.4.0"
django-ranged-fileresponse = ">=0.1.2"
drf-dynamic-fields = "==0.3.0"
djangorestframework = "==3.15.2"
drf-flex-fields = "==0.9.5"
drf-spectacular = "==0.28.0"
drf-generators = "==0.3.0"
lockfile = ">=0.12.0"
lxml = { version = ">=4.9.4", extras = ["html-clean"] }
defusedxml = ">=0.7.1"
numpy = ">=1.26.4,<2.0.0"
ordered-set = "==4.0.2"
pandas = ">=2.2.3"
psycopg2-binary = "==2.9.10"
pyarrow = ">=18.1.0,<19.0.0"
pydantic = ">=2.9.2"
python-dateutil = ">=2.8.1"
pytz = ">=2022.1,<2023.0"
requests = ">=2.32.3,<2.33.0"
rq = ">=1.16.2,<2.0.0"
rules = "==3.4"
ujson = ">=3.0.0"
xmljson = "==0.2.1"
colorama = ">=0.4.4"
pyboxen = ">=1.3.0"
redis = ">=5.2.1,<5.3.0"
sentry-sdk = ">=2.16.0"
launchdarkly-server-sdk = "==8.2.1"
python-json-logger = "==2.0.4"
google-cloud-storage = ">=2.13.0,<3.0.0"
google-cloud-logging = ">=3.10.0,<4.0.0"
django-csp = "==3.7"
openai = ">=1.10.0,<2.0.0"
django-migration-linter = ">=5.1.0,<6.0.0"
setuptools = ">=75.4.0"
djangorestframework-simplejwt = { version = ">=5.4.0,<6.0.0", extras = ["crypto"] }
tldextract = ">=5.1.3"
label-studio-sdk = { url = "https://github.com/HumanSignal/label-studio-sdk/archive/b8506c8a455528d163d2a941887ba7306a8ef9a9.zip" }

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"
pytest-cov = "5.0.0"
pytest-django = "4.9.0"
pytest-mock = "3.14.0"
tavern = "2.3.0"
fakeredis = "~=2.26.1"
pytest-env = "0.6.2"
responses = "0.13.0"
pytest-xdist = "3.6.1"
psutil = "7.0.0"
freezegun = "~=1.5.1"
pre-commit = "3.3.3"
s3transfer = "0.13.0"
mock = ">=5.1.0"
moto = ">=4.2.6"
requests-mock = "1.12.1"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core (>=2.0.0,<3.0.0)"]
build-backend = "poetry.core.masonry.api"
